GNOME Bugzilla – Bug 739701
Sections of main window don't stay sized properly between sessions
Last modified: 2021-05-26 09:51:22 UTC
The main window sections are resizeable but they don't stay sized as they were in the previous session. To demonstrate the problem in 2.3.1: 1. Launch EasyTAG and note how big the sections are when the app window comes up. 2. Resize the log height (if the log view is showing), directory hierarchy, and tag editing sections in the main window using the horizontal slider gadget making the sections wider or narrower. 3. Exit EasyTAG normally. 4. Relaunch EasyTAG and note that the sections are as they were in step 1, not as resized in step 2. I expect all sections to remain the same size percentage-wise from what EasyTAG had when I last quit the program normally. This way even if the window size must change (say, to accommodate a new screen resolution), the sections are the same proportion of the window width as they were. I imagine this would require recording percentage values somewhere appropriate and recomputing pixel widths on launch based on the recorded percentages.
This is a known regression since 2.2: https://mail.gnome.org/archives/easytag-list/2014-September/msg00015.html It came up while refactoring the window state saving and restoring code. EasyTAG now only restores the window dimensions, and whether the window was maximized. I plan to add code to save and restore the positions of the panes within the window before the next stable release.
*** Bug 742345 has been marked as a duplicate of this bug. ***
This is now partially fixed on master with commit 3bd3305bb4dfa683b929e11b8cb75d3216fe1ff5, which saves and restores the pane position between the browser (artist/album or directory list) and file/tag area. I am undecided as to whether to save and restore the positions of the other panes.
The ratio in width between the tree pane, file pane and tag/image pane should be persistent as well. By default they are equal in ratio, but this is not practical. So every user will adjust this to his or her liking and screen size and length of strings in directory names, file names and tags. Fixing this will decrease the amount of mouse work rearranging the width of the panes after each time easytage is started. (This an be often when starting it from the command line for working in specific directories directly.)
PS This was reported for Easytag version 2.4.3 on Ubuntu (Zesty).
GNOME is going to shut down bugzilla.gnome.org in favor of gitlab.gnome.org. As part of that, we are mass-closing older open tickets in bugzilla.gnome.org which have not seen updates for a longer time (resources are unfortunately quite limited so not every ticket can get handled). If you can still reproduce the situation described in this ticket in a recent and supported software version, then please follow https://wiki.gnome.org/GettingInTouch/BugReportingGuidelines and create a new enhancement request ticket at https://gitlab.gnome.org/GNOME/easytag/-/issues/ Thank you for your understanding and your help.