Store the main window horizontal paned position

Track changes in the position of the horizontal paned which contains the
browser and tag/file area. On application exit, save the position with
reference to the unmaximized window state. Restore the paned position on
startup.

https://bugzilla.gnome.org/show_bug.cgi?id=739701